<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_anonymous_story_text">"Note that once the &lt;b>Anonymous Viewer&lt;/b> is activated, Instagram will not record a view, and will show the story again (while the story is active). &lt;br> &lt;br> We can't control this behavior but it's a good &lt;b>feedback&lt;/b> for making sure this story was viewed anonymously"</string>
    <string name="about_anonymous_story_title">About Anonymous Story Viewer</string>
    <string name="about_facebook">Follow %1$s Support Page</string>
    <string name="about_facebook_page">Facebook Page</string>
    <string name="about_intro">Replay Introduction</string>
    <string name="about_version">Version Info</string>
    <string name="action_download">Download</string>
    <string name="action_friends">Friend Requests</string>
    <string name="action_more_settings">More Settings</string>
    <string name="action_post">Open Post</string>
    <string name="action_settings">Settings</string>
    <string name="action_share_image">Share Image</string>
    <string name="action_share_url">Copy URL</string>
    <string name="action_switch_theme">Switch Color</string>
    <string name="action_timeline">My Profile</string>
    <string name="action_up">Jump to Top</string>
    <string name="ad_blocker">Ad Blocker</string>
    <string name="add">Add</string>
    <string name="add_favorite">Added to Favorites</string>
    <string name="add_favorite_external">Add Favorite</string>
    <string name="add_favorite_google">Search From Google</string>
    <string name="add_fb_account">Add Facebook Account</string>
    <string name="add_keyword">Add a Keyword</string>
    <string name="add_label">Add</string>
    <string name="add_picture_video">Add photo/video</string>
    <string name="allow">Allow the user access</string>
    <string name="and">and</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anonymous_IG_story">Anonymous Story Viewer</string>
    <string name="anonymous_story_title">Anonymous Story Viewer</string>
    <string name="anonymous_viewer">Anonymous Viewer</string>
    <string name="app_name">Friendly</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_error">Application error: %1$d</string>
    <string name="apps_share">Apps Share</string>
    <string name="assistant">%1$s Assistant</string>
    <string name="awesome_tip">Awesome Tip</string>
    <string name="bookmark_account_settings">Account Settings</string>
    <string name="bookmark_feed">Feeds</string>
    <string name="bookmark_feed_preference">News Feed Preferences</string>
    <string name="bookmark_help_settings">Facebook Help And Settings</string>
    <string name="bookmark_language">Languages</string>
    <string name="bookmark_photo">Photos</string>
    <string name="bookmark_privacy">Privacy Shortcuts</string>
    <string name="bookmark_video">Videos</string>
    <string name="bottom">Bottom</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottom_ui">Select Your Navigation</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="browser">Browser</string>
    <string name="button11_large_text">0</string>
    <string name="button1_large_text">1</string>
    <string name="button2_large_text">2</string>
    <string name="button2_small_text">ABC</string>
    <string name="button3_large_text">3</string>
    <string name="button3_small_text">DEF</string>
    <string name="button4_large_text">4</string>
    <string name="button4_small_text">GHI</string>
    <string name="button5_large_text">5</string>
    <string name="button5_small_text">JKL</string>
    <string name="button6_large_text">6</string>
    <string name="button6_small_text">MNO</string>
    <string name="button7_large_text">7</string>
    <string name="button7_small_text">PQRS</string>
    <string name="button8_large_text">8</string>
    <string name="button8_small_text">TUV</string>
    <string name="button9_large_text">9</string>
    <string name="button9_small_text">WXYZ</string>
    <string name="cancel">Cancel</string>
    <string name="category_about">About</string>
    <string name="category_advanced">Advanced Settings</string>
    <string name="category_data">Data Usage</string>
    <string name="category_facebook">Facebook Account</string>
    <string name="category_instagram">Instagram Account</string>
    <string name="category_notification">Notifications</string>
    <string name="category_privacy">Privacy</string>
    <string name="category_pro">Friendly+</string>
    <string name="category_style">Style &amp; Appearance</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_color">Choose Your Color</string>
    <string name="choose_external_storage">Choose External Storage</string>
    <string name="choose_storage">Choose Storage</string>
    <string name="clear_cookie">Clear Cookie</string>
    <string name="clear_cookie_sub">Remove All Cookies</string>
    <string name="clear_cookie_sure">Are you sure to remove all cookies from the app?</string>
    <string name="clear_data">Something went wrong, your data will be cleared and the App will restart.</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clipboard_link_share">Display Link From Clipboard</string>
    <string name="close">CLOSE</string>
    <string name="color_name_blue">Blue</string>
    <string name="color_name_concrete">Concrete</string>
    <string name="color_name_custom">Advanced Color Selector</string>
    <string name="color_name_downy">Downy</string>
    <string name="color_name_facebook">Facebook</string>
    <string name="color_name_green">Green</string>
    <string name="color_name_green_lt">Light Green</string>
    <string name="color_name_obscure">Black</string>
    <string name="color_name_orange">Orange</string>
    <string name="color_name_pink">Pink</string>
    <string name="color_name_purple">Purple</string>
    <string name="color_name_red">Red</string>
    <string name="color_name_selector">Color Selector</string>
    <string name="color_name_yellow">Yellow</string>
    <string name="com.crashlytics.android.build_id">6d3acf91dc184a688744bd07e114f4a3</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="confirm">Ok</string>
    <string name="copy_article_link">Copy Article Link</string>
    <string name="copy_link">Copy Link</string>
    <string name="copy_post_link">Copy Post Link</string>
    <string name="copy_text">Copy Text</string>
    <string name="desktop_version">Desktop Version</string>
    <string name="desktop_version_name">Desktop</string>
    <string name="done">Done</string>
    <string name="download_photo">Picture Downloading…</string>
    <string name="download_video">Video Downloading…</string>
    <string name="facebook_filter">Hide Posts by Keyword</string>
    <string name="facebook_highlight">Highlight Posts by Keyword</string>
    <string name="facebook_order">Home Feed</string>
    <string name="facebook_order_recent">Most Recent </string>
    <string name="facebook_pymk">"Hide 'People You May Know'"</string>
    <string name="facebook_story">Hide Stories</string>
    <string name="facebook_tag">Add a Keyword</string>
    <string name="favorite_menu">Favorite</string>
    <string name="favorite_shortcut">Favorites</string>
    <string name="fb_share">Facebook Share</string>
    <string name="float_account">Switch Account</string>
    <string name="float_feed">Feed Filters</string>
    <string name="intro_welcome_3">Social Browser</string>
    <string name="no_image">No Image</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="open_in_browser">Open In Browser</string>
    <string name="privacy">Privacy Policy</string>
    <string name="share_facebook">Share on Facebook</string>
    <string name="share_via">Share via</string>
    <string name="tedbottompicker_title">Select Image</string>
    <string name="tos">Terms of Use</string>
    <string name="tos_agree_2">Covering the collection of nonpersonal ad data</string>
</resources>