<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/feed_settings_layout" android:background="@drawable/user_bottom_background" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <io.friendly.ui.dialog.RowCheckBoxLayout android:id="@id/order_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" app:summary="@string/facebook_order_recent" app:title="@string/facebook_order" />
    <io.friendly.ui.dialog.RowLayout android:id="@id/highlight_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" app:summary="@string/facebook_tag" app:title="@string/facebook_highlight" />
    <io.friendly.ui.dialog.RowLayout android:id="@id/tag_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" app:summary="@string/facebook_tag" app:title="@string/facebook_filter" />
    <io.friendly.ui.dialog.RowCheckBoxLayout android:id="@id/story_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" app:summary="@string/off" app:title="@string/facebook_story" />
    <io.friendly.ui.dialog.RowCheckBoxLayout android:id="@id/pymk_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" app:summary="@string/off" app:title="@string/facebook_pymk" />
</LinearLayout>