<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="?dialogPreferredPadding" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.recyclerview.widget.DialogTitle android:textSize="18.0sp" android:textColor="#ff333333" android:ellipsize="end" android:gravity="left" android:layout_gravity="start" android:id="@id/title" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/choose_color" style="?android:windowTitleStyle" />
    <LinearLayout android:gravity="right" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
        <com.bilibili.magicasakura.widgets.TintButton android:textColor="@color/selector_primary_click" android:id="@android:id/button2" android:background="?selectableItemBackground" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/cancel" style="?buttonBarNegativeButtonStyle" />
        <com.bilibili.magicasakura.widgets.TintButton android:textColor="@color/selector_primary_click" android:id="@android:id/button1" android:background="?selectableItemBackground" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/confirm" style="?buttonBarPositiveButtonStyle" />
    </LinearLayout>
</LinearLayout>