<?xml version="1.0" encoding="utf-8"?>
<io.friendly.ui.materialintroscreen.parallax.ParallaxLinearLayout android:orientation="vertical" android:id="@id/video_holder" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="10.0"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="bottom|center" android:orientation="vertical" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="2.6">
        <TextView android:textSize="20.0sp" android:textColor="@color/white" android:id="@id/title_intro" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAlignment="center" app:layout_parallaxFactor="0.9" />
        <TextView android:textSize="20.0sp" android:textColor="@color/white_trans" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/intro_welcome_3" android:alpha="0.8" android:textAlignment="center" app:layout_parallaxFactor="0.8" />
    </LinearLayout>
    <ImageView android:layout_gravity="center" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="0.0dip" android:src="@drawable/onboard_perso" android:layout_weight="4.8" app:layout_parallaxFactor="0.7" />
    <LinearLayout android:orientation="vertical" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="2.6" android:alpha="0.8" android:paddingStart="15.0dip" android:paddingEnd="15.0dip" app:layout_parallaxFactor="0.4">
        <TextView android:textSize="14.0sp" android:textColor="@color/grey_200" android:ellipsize="end" android:gravity="bottom|center" android:layout_gravity="center_horizontal" android:id="@id/tos_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" android:maxLines="1" android:scrollHorizontally="true" android:alpha="0.6" android:textAlignment="center" />
        <LinearLayout android:gravity="bottom|center" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="10.0dip" android:paddingEnd="10.0dip" app:layout_parallaxFactor="0.4">
            <TextView android:textSize="14.0sp" android:textColor="@color/grey_200" android:ellipsize="end" android:id="@id/tos" android:background="?selectableItemBackgroundBorderless" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tos" android:maxLines="1" android:scrollHorizontally="true" android:textAlignment="center" />
            <TextView android:textSize="14.0sp" android:textColor="@color/grey_200" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip" android:text="@string/and" android:maxLines="1" android:alpha="0.6" android:textAlignment="center" />
            <TextView android:textSize="14.0sp" android:textColor="@color/grey_200" android:ellipsize="end" android:id="@id/pp" android:background="?selectableItemBackgroundBorderless" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/privacy" android:maxLines="1" android:scrollHorizontally="true" android:textAlignment="center" />
        </LinearLayout>
        <TextView android:textSize="14.0sp" android:textColor="@color/grey_200" android:ellipsize="end" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" android:text="@string/tos_agree_2" android:maxLines="1" android:scrollHorizontally="true" android:alpha="0.6" android:textAlignment="center" />
    </LinearLayout>
</io.friendly.ui.materialintroscreen.parallax.ParallaxLinearLayout>