<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="70.0dip" android:weightSum="4.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/bottom_button_1" android:background="?selectableItemBackground" android:padding="8.0dip" android:focusable="true" android:clickable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" android:alpha="1.0">
        <ImageView android:layout_width="22.0dip" android:layout_height="22.0dip" android:src="@drawable/ic_arrow_upward_white_24dp" />
        <TextView android:textSize="12.0sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/action_up" android:singleLine="true" android:marqueeRepeatLimit="marquee_forever" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/bottom_button_3" android:background="?selectableItemBackground" android:padding="8.0dip" android:focusable="true" android:clickable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" android:alpha="1.0">
        <ImageView android:layout_width="22.0dip" android:layout_height="22.0dip" android:src="@drawable/ic_filter_list_white_36dp" />
        <TextView android:textSize="12.0sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/float_feed" android:singleLine="true" android:marqueeRepeatLimit="marquee_forever" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/bottom_button_favorite" android:background="?selectableItemBackground" android:padding="8.0dip" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" android:alpha="1.0">
        <ImageView android:layout_width="22.0dip" android:layout_height="22.0dip" android:src="@drawable/ic_star_white_36dp" />
        <TextView android:textSize="12.0sp" android:textColor="@color/white" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/favorite_shortcut" android:scrollHorizontally="true" android:singleLine="true" android:marqueeRepeatLimit="marquee_forever" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/bottom_button_2" android:background="?selectableItemBackground" android:padding="8.0dip" android:focusable="true" android:clickable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" android:alpha="1.0">
        <ImageView android:id="@id/device_icon_bottom" android:padding="1.0dip" android:layout_width="22.0dip" android:layout_height="22.0dip" android:src="@drawable/ic_desktop_windows_white_24dp" />
        <TextView android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/device_text_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/desktop_version_name" android:singleLine="true" android:marqueeRepeatLimit="marquee_forever" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/bottom_button_4" android:background="?selectableItemBackground" android:padding="8.0dip" android:focusable="true" android:clickable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" android:alpha="1.0">
        <ImageView android:layout_width="22.0dip" android:layout_height="22.0dip" android:src="@drawable/ic_account_circle_white_36dp" />
        <TextView android:textSize="12.0sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/float_account" android:singleLine="true" android:marqueeRepeatLimit="marquee_forever" />
    </LinearLayout>
</LinearLayout>